--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "npm": ">=5"
   },
   "scripts": {
-    "test": "cross-env CI=1 react-scripts test",
-    "test:watch": "react-scripts test",
+    "storybook": "start-storybook -p 6006",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "build": "rollup -c",
     "start": "rollup -c -w",
     "prepare": "npm run build",
     "predeploy": "cd example && npm install && npm run build",
     "deploy": "gh-pages -d example/build",
-    "semantic-release": "semantic-release"
+    "semantic-release": "semantic-release",
+    "build-storybook": "build-storybook"
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
@@ -32,14 +34,21 @@
     "date-fns": "^1.30.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-actions": "^4.1.7",
+    "@storybook/addon-links": "^4.1.7",
+    "@storybook/addons": "^4.1.7",
+    "@storybook/react": "^4.1.7",
     "@svgr/rollup": "^2.4.1",
-    "babel-core": "^6.26.3",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^9.0.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
+    "babel-jest": "^23.6.0",
+    "babel-loader": "^8.0.5",
     "cross-env": "^5.1.4",
+    "css-loader": "^2.1.0",
     "eslint": "^5.0.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
@@ -50,22 +59,29 @@
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^1.2.0",
     "husky": "^1.3.1",
+    "jest": "^23.6.0",
     "less": "^3.9.0",
+    "less-loader": "^4.1.0",
+    "moment": "^2.23.0",
+    "postcss-loader": "^3.0.0",
     "prettier": "^1.15.3",
     "prettier-eslint": "^8.8.2",
     "pretty-quick": "^1.10.0",
     "react": "^16.4.1",
+    "react-big-calendar": "^0.20.3",
     "react-dom": "^16.4.1",
-    "react-scripts": "^2.1.3",
     "react-testing-library": "^5.4.4",
+    "regenerator-runtime": "^0.13.1",
     "rollup": "^0.64.1",
-    "rollup-plugin-babel": "^3.0.7",
+    "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.1.3",
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-url": "^1.4.0",
-    "semantic-release": "^15.13.3"
+    "semantic-release": "^15.13.3",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.28.4"
   },
   "files": [
     "dist"
