--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "build": "rollup -c",
-    "start": "rollup -c -w",
-    "prepare": "npm run build",
-    "predeploy": "cd example && npm install && npm run build",
-    "deploy": "gh-pages -d example/build",
+    "predeploy": "npm install && npm run build-storybook",
+    "deploy": "gh-pages -d storybook-static",
     "semantic-release": "semantic-release",
     "build-storybook": "build-storybook"
   },
@@ -47,8 +45,9 @@
     "babel-eslint": "^9.0.0",
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.5",
-    "cross-env": "^5.1.4",
     "css-loader": "^2.1.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
     "eslint": "^5.0.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-config-standard-react": "^6.0.0",
@@ -63,14 +62,12 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "moment": "^2.23.0",
-    "postcss-loader": "^3.0.0",
     "prettier": "^1.15.3",
     "prettier-eslint": "^8.8.2",
     "pretty-quick": "^1.10.0",
     "react": "^16.4.1",
     "react-big-calendar": "^0.20.3",
     "react-dom": "^16.4.1",
-    "react-testing-library": "^5.4.4",
     "regenerator-runtime": "^0.13.1",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^4.3.2",
