--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,13 @@
 language: node_js
 node_js:
-  - 9
   - 8
+  - 9
+deploy:
+  provider: pages
+  script: npm run predeploy
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN
+  keep-history: true
+  local-dir: './storybook-static'
+  on:
+    branch: master
