--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ node_js:
   - 8
   - 9
 deploy:
-  provider: pages
-  script: npm run predeploy
+  provider: script
+  script: npm run predeploy && npm run deploy
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
   keep-history: true
