--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,23 @@ language: node_js
 node_js:
   - 8
   - 9
+
+cache:
+  directorioes:
+    - node_modules
+
+install:
+  - npm install
+
+script:
+  - npm run test
+  - npm run build
+  - npm run predeploy
+
 deploy:
-  provider: script
-  script: npm run predeploy && npm run deploy
+  provider: pages
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
-  keep-history: true
   local-dir: './storybook-static'
   on:
     branch: master
