--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-big-calendar": "^0.20.3"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "date-fns": "^1.30.1"
   },
   "devDependencies": {
